# c-check

./: CMakeLists.txt  README.md  run.sh
database/: database.c  database.db  database.h
main/: CCheck  main.c
screen/client/: client_window.c  client_window.glade  client_window.glade~  client_window.h  main_window.glade~
screen/main/: main_window.c  main_window.glade  main_window.h
screen/result/: result_window.c  result_window.glade  result_window.glade~  result_window.h
screen/server/: server_window.c  server_window.glade~  server_window.h
screen/setup/: setup_window.c  setup_window.glade  setup_window.h
socket/client/: client.c  client.h
socket/server/: server.c  server.h
struct/: constants.h  user.h
